# stewart

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: stewart.launch
model/: stewart.sdf
model/sdf/: stewart.sdf
model/sdf/stewart/: model.config  model.sdf  stewart.sdf  stewart.sdf.erb
model/urdf/: stewart.xml  stewart.xml.erb
plugin/: CMakeLists.txt  joint_controller.cc
sdf/stewart/: model.sdf.erb
src/: ik.cpp  inverse_kinematics.py  ps4_controller.cpp  ps4_controller.py  stewart_test.py
world/: stewart.world  stewart.world.backup  stewart.world.erb
